# TheParticleFireSimulation

./: CMakeLists.txt  Particle.h  Screen.h  Swarm.h  main.cpp
cmake/: FindSDL2_image.cmake
